<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="nombre">Escribe tu nombre!!</string>
    <string name="nombreInput">Escribe tu nombre aqui!!</string>
    <string name="button">Click aca!!</string>
    <string name="h1name">h1</string>
    <string name="title"> </string>

    <string name="wave1">Ir al menu principal</string>
    <string name="wave2">Ir a una nueva app</string>
    <string name="wave3">Ir a app que recicla vistas</string>

    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="height">Selecciona tu altura!!</string>
    <string name="edad">Selecciona tu edad</string>
    <string name="peso">Selecciona tu masa</string>
    <string name="todo">TODO</string>
    <string name="peso_numero">60</string>
    <string name="calcular">calcular el IMC</string>

    <!-- ultima app-->
    <string name="title2">Primera app reutilizable</string>
    <string name="subtitle1">Primeras cartas</string>
    <string name="subtitle2">Segundas cartas</string>
    
<!--    inputs-->
    <string name="inputTask">Escribe tu tarea</string>

    <string name="negocios">negocios</string>
</resources>