<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".primeraApp.PrimeraActivity">

  <View
      android:id="@+id/cube1"
      android:layout_width="129dp"
      android:layout_height="120dp"
      android:background="#FF9800"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.216"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.798">

  </View>

  <View
      android:id="@+id/cube2"
      android:layout_width="50dp"
      android:layout_height="50dp"
      android:background="#FF9800"
      app:layout_constraintBottom_toTopOf="@+id/cube1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.806"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.36">
  </View>

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/alumni_sans_inline_one"
      android:text="@string/h1name"
      android:textColor="@color/black"
      android:textSize="80sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

  </TextView>

  <Button
      android:id="@+id/FirstButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="#FF9800"
      android:text="@string/button"
      android:textColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/input">

  </Button>

  <EditText
      android:inputType="text"
      android:id="@+id/input"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:minHeight="48dp"
      android:singleLine="true"
      android:hint="@string/nombreInput"
      android:maxLines="1"
      android:autofillHints="name"
      app:layout_constraintTop_toBottomOf="@+id/textView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/nombre"
      app:layout_constraintBottom_toTopOf="@+id/textView"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:fontFamily="@font/alumni_sans_inline_one"
      android:textSize="40sp"
      android:textColor="@color/black"
      android:id="@+id/text1"
      android:textStyle="italic">

  </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>