<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IMCAPP.IMCActivity"
    android:padding="16dp"
    android:layout_marginTop="26dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/man"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/woman"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/male"
                android:src="@drawable/male"
                app:tint="@color/white"
                tools:ignore="ImageContrastCheck">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck">
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/woman"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/orange"
        app:layout_constraintEnd_toStartOf="@+id/man"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/female"
                android:src="@drawable/female"
                app:tint="@color/white"
                tools:ignore="ImageContrastCheck">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck">
            </TextView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/woman"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/orange"
        android:id="@+id/height"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textAllCaps="true"
                tools:ignore="TextContrastCheck"
                android:textColor="@color/white"
                android:textSize="15sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                tools:ignore="TextContrastCheck"
                android:textColor="@color/white"
                android:id="@+id/number"
                android:textSize="20sp">
            </TextView>
            <com.google.android.material.slider.RangeSlider
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="100"
                android:valueTo="200"
                android:stepSize="1"

                app:trackColorActive="@color/orange_dark"
                app:trackColorInactive="@color/orange_dark"
                app:thumbColor="@color/orange_dark"
                app:haloColor="@color/purple_200"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/peso"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/height"
        app:layout_constraintStart_toEndOf="@+id/edad"
        app:layout_constraintTop_toBottomOf="@+id/height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck"></TextView>

            <TextView
                android:id="@+id/peso_numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,TextContrastCheck"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/upPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/orange_dark"
                    android:contentDescription="@string/todo"
                    android:importantForAccessibility="no"

                    android:src="@drawable/up"

                    app:borderWidth="0dp"
                    app:rippleColor="@color/white"
                    app:tint="@color/white"
                    tools:ignore="ClassNameCheck,ImageContrastCheck">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/downPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/orange_dark"
                    android:contentDescription="@string/todo"

                    android:src="@drawable/down"

                    app:borderWidth="0dp"
                    app:rippleColor="@color/white"
                    app:tint="@color/white"
                    tools:ignore="ClassNameCheck,ImageContrastCheck"></com.google.android.material.floatingactionbutton.FloatingActionButton>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/edad"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edad"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck"></TextView>

            <TextView
                android:id="@+id/edad_numerica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso_numero"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/upEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/orange_dark"
                    android:contentDescription="@string/todo"
                    android:importantForAccessibility="no"

                    android:src="@drawable/up"

                    app:borderWidth="0dp"
                    app:rippleColor="@color/white"
                    app:tint="@color/white"
                    tools:ignore="ClassNameCheck,ImageContrastCheck">

                </com.google.android.material.floatingactionbutton.FloatingActionButton>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/downEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/orange_dark"
                    android:contentDescription="@string/todo"

                    android:src="@drawable/down"

                    app:borderWidth="0dp"
                    app:rippleColor="@color/white"
                    app:tint="@color/white"
                    tools:ignore="ClassNameCheck,ImageContrastCheck,DuplicateSpeakableTextCheck"></com.google.android.material.floatingactionbutton.FloatingActionButton>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:shadowRadius="@integer/material_motion_duration_medium_1"
        android:text="@string/calcular"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>